[tool.uv.workspace]
members = ["common", "mnist"]

[project]
name = "spring26"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "numpy",
    "pandas",
    "matplotlib",
    "scipy",
    "torch",
    "torchvision",
    "torchaudio",
    "jupyter",
    "ipykernel",
    "python-dotenv",
    "seaborn",
    "scikit-learn",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "black",
    "flake8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["common", "mnist"]

[tool.black]
line-length = 100
include = '\.pyi?$'